--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/1.css" type="text/css" media="screen,projection" />
 <meta property="og:title" content="A módszer mindenki számára elérhető">
 <meta property="og:description" content="Otthon">
-<meta property="og:image" content="https://i.ibb.co/C6LM7s0/husl1.jpg">
+<meta property="og:image" content="https://i.ibb.co/NV78SSf/husl3.jpg">
 
 
 </head>
